# CPottTest

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CellularPotts.cpp  CellularPotts.h
test/: test_ZeroTemperatureRejectsPositiveDelta.cpp  test_energy.cpp  test_volume.cpp
